# ommodelwrapper

./: MANIFEST.in  README.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  pkgdocs.rst  srcdocs.rst  usage.rst
src/ommodelwrapper/: OM_build.py  load_modelica_mat.py  ommodelwrapper.py
src/ommodelwrapper/test/: SimAcceleration.mo  VehicleDesign.mo  test_ommodelwrapper.py
