[metadata]
name = ommodelwrapper
version = 0.1
summary = OpenMDAO Component plugin for wrapping OpenModelica model
description-file = README.txt
keywords = openmdao, OpenModelica, Modelica
home-page = 
download-url = 
author = Tom Bancroft
author-email = 
maintainer = Kyungjin Moon
maintainer-email = kyungjin.moon@asdl.gatech.edu
license = GNU General Public License, version 2
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

